Fix logout icon visibillity on android

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -64,7 +64,7 @@ page-home {
     right: 0;
     margin-top: .6em;
     margin-right: 1.6em;
-    z-index: 27 !important;
+    z-index: 28 !important;
     ion-icon {
       font-size: 3em;
     }
